# fishingscript-sdv

./: fish.py  pyproject.toml
models/: __init__.py  object_finder.py
stardew_fisher/: __init__.py
stardew_fisher.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
stardew_fisher/envs/: stardew_fisher_env.py
